--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -32,6 +32,9 @@ r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=true
 
 r.Shadow.Virtual.Enable=1
 r.CustomDepth=3
+r.AntiAliasingMethod=4
+r.Lumen.TraceMeshSDFs=1
+r.Lumen.TranslucencyReflections.FrontLayer.EnableForProject=False
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
