--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -7,7 +7,7 @@ GameName=StarshipSlayers
 +EditProfiles=(Name="Trigger",CustomResponses=((Channel=Projectile, Response=ECR_Ignore)))
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap
+EditorStartupMap=/Game/Maps/FirstPersonMap.FirstPersonMap
 +EditorTemplateMapOverrides=(Thumbnail=None,Map=None,DisplayName="")
 LocalMapOptions=
 TransitionMap=None
@@ -19,7 +19,7 @@ bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap
 ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Game/FirstPerson/Blueprints/BP_FirstPersonGameMode.BP_FirstPersonGameMode_C
+GlobalDefaultGameMode=/Game/Gameplay/GameMode/MainGameMode_BP.MainGameMode_BP_C
 GlobalDefaultServerGameMode=None
 
 [/Script/Engine.RendererSettings]
