--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -67,3 +67,6 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[/Script/Engine.UserInterfaceSettings]
+RenderFocusRule=Never
+
